--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: Build Android APK
+name: Debug Android RN Build (upload build outputs + logs)
 
 on:
   push:
@@ -9,11 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
+      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
       JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+      NODE_OPTIONS: "--max-old-space-size=4096"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
@@ -21,35 +25,113 @@ jobs:
           distribution: temurin
           java-version: '11'
 
-      - name: Install dependencies (Gradle)
+      - name: Set up Node 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      - name: Install packages needed for SDK/tools
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y wget unzip gradle
+          sudo apt-get install -y wget unzip tar git procps
 
-      - name: Generate gradle wrapper if missing
+      - name: Create Android SDK directories
         run: |
-          if [ ! -f ./gradle/wrapper/gradle-wrapper.jar ]; then
-            echo "gradle wrapper JAR missing — generating wrapper via system gradle"
-            gradle wrapper --gradle-version 7.5
+          mkdir -p "${ANDROID_SDK_ROOT}/cmdline-tools"
+          mkdir -p "${ANDROID_SDK_ROOT}/licenses"
+
+      - name: Download & install Android command-line tools
+        run: |
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O /tmp/cmdline.zip
+          unzip -q /tmp/cmdline.zip -d /tmp/cmdline
+          mv /tmp/cmdline/cmdline-tools "${ANDROID_SDK_ROOT}/cmdline-tools/latest"
+          rm -rf /tmp/cmdline /tmp/cmdline.zip
+
+      - name: Add Android tools to PATH
+        run: |
+          echo "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "${ANDROID_SDK_ROOT}/platform-tools" >> $GITHUB_PATH
+          echo "${ANDROID_SDK_ROOT}/emulator" >> $GITHUB_PATH
+
+      - name: Accept SDK licenses & install platform tools/build-tools
+        env:
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+        run: |
+          yes | sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses || true
+          sdkmanager --sdk_root=${ANDROID_SDK_ROOT} "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+      - name: Show SDK info (debug)
+        run: |
+          echo "ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT}"
+          ls -la ${ANDROID_SDK_ROOT} || true
+          sdkmanager --list --sdk_root=${ANDROID_SDK_ROOT} | sed -n '1,80p'
+
+      - name: Install npm dependencies (CRITICAL - BEFORE BUILD)
+        run: |
+          echo "Installing npm dependencies..."
+          npm install --legacy-peer-deps
+          echo "Verifying node_modules..."
+          ls -la node_modules/ | head -20
+          ls -la node_modules/@react-native-community/ || echo "react-native-community packages not found"
+
+      - name: Ensure gradle wrapper exists (generate if missing)
+        run: |
+          cd android
+          if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then
+            echo "gradle-wrapper.jar missing - downloading..."
+            mkdir -p gradle/wrapper
+            curl -L -o gradle/wrapper/gradle-wrapper.jar https://raw.githubusercontent.com/gradle/gradle/v7.5.0/gradle/wrapper/gradle-wrapper.jar
           else
             echo "gradle-wrapper.jar present"
           fi
+          cd ..
 
-      - name: Grant execute permission to gradlew
-        run: chmod +x ./android/gradlew || true
+      - name: Ensure gradlew executable
+        run: |
+          chmod +x android/gradlew || true
 
-      - name: Build Release APK
+      - name: Run Gradle build (capture console log)
         working-directory: android
         run: |
-          # Try to use gradlew if present, otherwise fallback to system gradle
-          if [ -f ./gradlew ]; then
-            ./gradlew assembleRelease --no-daemon
-          else
-            gradle assembleRelease --no-daemon
-          fi
+          set -o pipefail
+          echo "Starting Gradle build..."
+          echo "Current directory: $(pwd)"
+          echo "Checking node_modules in parent: $(ls -la ../node_modules/ | head -10)"
+          ./gradlew --no-daemon assembleRelease assembleDebug bundleRelease 2>&1 | tee ../gradle-build.log || true
+        env:
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          JAVA_HOME: ${{ env.JAVA_HOME }}
 
-      - name: Upload Release APK
+      - name: List output directories (debug)
+        run: |
+          echo "===== Listing outputs ====="
+          find android/app/build -maxdepth 6 -type f -print || true
+          echo "===== Show release APK dir ====="
+          ls -la android/app/build/outputs/apk/release || true
+          echo "===== Show debug APK dir ====="
+          ls -la android/app/build/outputs/apk/debug || true
+          echo "===== Show bundle outputs ====="
+          ls -la android/app/build/outputs/bundle || true
+          echo "===== Show gradle log snippet ====="
+          tail -n 200 gradle-build.log || true
+
+      - name: Upload APK/AAB artifacts (if any)
         uses: actions/upload-artifact@v4
         with:
-          name: android-release-apk
-          path: android/app/build/outputs/**/*.apk
+          name: android-apk-aab
+          path: |
+            android/app/build/outputs/**/*.apk
+            android/app/build/outputs/**/*.aab
+
+      - name: Upload full android build folder (for debugging)
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-build-folder
+          path: android/app/build
+
+      - name: Upload gradle console log
+        uses: actions/upload-artifact@v4
+        with:
+          name: gradle-build-log
+          path: gradle-build.log
