--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,5 +26,9 @@ dependencies {
     implementation "com.facebook.react:react-native:+"
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-applyNativeModulesAppBuildGradle(project)
+// Only apply native modules if the file exists
+def nativeModulesPath = file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+if (nativeModulesPath.exists()) {
+    apply from: nativeModulesPath
+    applyNativeModulesAppBuildGradle(project)
+}
