--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: Debug Android RN Build (upload build outputs + logs)
+name: Build Android APK
 
 on:
   push:
@@ -8,130 +8,85 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
-      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
-      NODE_OPTIONS: "--max-old-space-size=4096"
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: 'temurin'
           java-version: '11'
 
-      - name: Set up Node 18
+      - name: Set up Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: '18'
           cache: 'npm'
 
-      - name: Install packages needed for SDK/tools
+      - name: Install dependencies
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y wget unzip tar git procps
+          npm install
+          
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Create Android SDK directories
-        run: |
-          mkdir -p "${ANDROID_SDK_ROOT}/cmdline-tools"
-          mkdir -p "${ANDROID_SDK_ROOT}/licenses"
+      - name: Make gradlew executable
+        run: chmod +x android/gradlew
 
-      - name: Download & install Android command-line tools
-        run: |
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O /tmp/cmdline.zip
-          unzip -q /tmp/cmdline.zip -d /tmp/cmdline
-          mv /tmp/cmdline/cmdline-tools "${ANDROID_SDK_ROOT}/cmdline-tools/latest"
-          rm -rf /tmp/cmdline /tmp/cmdline.zip
-
-      - name: Add Android tools to PATH
-        run: |
-          echo "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "${ANDROID_SDK_ROOT}/platform-tools" >> $GITHUB_PATH
-          echo "${ANDROID_SDK_ROOT}/emulator" >> $GITHUB_PATH
-
-      - name: Accept SDK licenses & install platform tools/build-tools
-        env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-        run: |
-          yes | sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses || true
-          sdkmanager --sdk_root=${ANDROID_SDK_ROOT} "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
-      - name: Show SDK info (debug)
-        run: |
-          echo "ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT}"
-          ls -la ${ANDROID_SDK_ROOT} || true
-          sdkmanager --list --sdk_root=${ANDROID_SDK_ROOT} | sed -n '1,80p'
-
-      - name: Install npm dependencies (CRITICAL - BEFORE BUILD)
-        run: |
-          echo "Installing npm dependencies..."
-          npm install --legacy-peer-deps
-          echo "Verifying node_modules..."
-          ls -la node_modules/ | head -20
-          ls -la node_modules/@react-native-community/ || echo "react-native-community packages not found"
-
-      - name: Ensure gradle wrapper exists (generate if missing)
+      - name: Download gradle wrapper jar if missing
         run: |
           cd android
           if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then
-            echo "gradle-wrapper.jar missing - downloading..."
             mkdir -p gradle/wrapper
-            curl -L -o gradle/wrapper/gradle-wrapper.jar https://raw.githubusercontent.com/gradle/gradle/v7.5.0/gradle/wrapper/gradle-wrapper.jar
-          else
-            echo "gradle-wrapper.jar present"
+            curl -L -o gradle/wrapper/gradle-wrapper.jar \
+              https://raw.githubusercontent.com/gradle/gradle/v7.5.0/gradle/wrapper/gradle-wrapper.jar
           fi
-          cd ..
 
-      - name: Ensure gradlew executable
-        run: |
-          chmod +x android/gradlew || true
-
-      - name: Run Gradle build (capture console log)
+      - name: Build Release APK
         working-directory: android
-        run: |
-          set -o pipefail
-          echo "Starting Gradle build..."
-          echo "Current directory: $(pwd)"
-          echo "Checking node_modules in parent: $(ls -la ../node_modules/ | head -10)"
-          ./gradlew --no-daemon assembleRelease assembleDebug bundleRelease 2>&1 | tee ../gradle-build.log || true
-        env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-          JAVA_HOME: ${{ env.JAVA_HOME }}
+        run: ./gradlew assembleRelease --stacktrace --info
+        
+      - name: Build Debug APK
+        working-directory: android
+        run: ./gradlew assembleDebug --stacktrace
+        continue-on-error: true
 
-      - name: List output directories (debug)
+      - name: List build outputs
         run: |
-          echo "===== Listing outputs ====="
-          find android/app/build -maxdepth 6 -type f -print || true
-          echo "===== Show release APK dir ====="
-          ls -la android/app/build/outputs/apk/release || true
-          echo "===== Show debug APK dir ====="
-          ls -la android/app/build/outputs/apk/debug || true
-          echo "===== Show bundle outputs ====="
-          ls -la android/app/build/outputs/bundle || true
-          echo "===== Show gradle log snippet ====="
-          tail -n 200 gradle-build.log || true
+          echo "=== Release APK ==="
+          ls -lh android/app/build/outputs/apk/release/ || echo "No release APK found"
+          echo ""
+          echo "=== Debug APK ==="
+          ls -lh android/app/build/outputs/apk/debug/ || echo "No debug APK found"
 
-      - name: Upload APK/AAB artifacts (if any)
+      - name: Upload Release APK
         uses: actions/upload-artifact@v4
+        if: success()
         with:
-          name: android-apk-aab
+          name: app-release
+          path: android/app/build/outputs/apk/release/*.apk
+          
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: app-debug
+          path: android/app/build/outputs/apk/debug/*.apk
+
+      - name: Upload build logs on failure
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: build-logs
           path: |
-            android/app/build/outputs/**/*.apk
-            android/app/build/outputs/**/*.aab
-
-      - name: Upload full android build folder (for debugging)
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-build-folder
-          path: android/app/build
-
-      - name: Upload gradle console log
-        uses: actions/upload-artifact@v4
-        with:
-          name: gradle-build-log
-          path: gradle-build.log
+            android/app/build/outputs/logs/
+            ~/.gradle/daemon/*/daemon-*.log
