--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "com.facebook.react"
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -11,11 +12,21 @@ android {
         versionName "1.0"
     }
     
+    signingConfigs {
+        debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
+    
     buildTypes {
         debug {
-            debuggable true
+            signingConfig signingConfigs.debug
         }
         release {
+            signingConfig signingConfigs.debug
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -23,7 +34,8 @@ android {
 }
 
 dependencies {
-    implementation "com.facebook.react:react-native:+"
+    implementation("com.facebook.react:react-android")
+    implementation("com.facebook.react:hermes-android")
 }
 
 // Only apply native modules if the file exists
