--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -50,6 +50,9 @@ jobs:
               https://raw.githubusercontent.com/gradle/gradle/v7.5.0/gradle/wrapper/gradle-wrapper.jar
           fi
 
+      - name: Create debug keystore
+        run: bash create_debug_keystore.sh
+
       - name: Build Release APK
         working-directory: android
         run: ./gradlew assembleRelease --stacktrace --info
